--- a/.github/workflows/learned.yml
+++ b/.github/workflows/learned.yml
@@ -31,6 +31,20 @@ jobs:
     steps:
       - name: Set blue color
         run: echo "Deployed"
+        
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          ref: main
+          path: gh-pages
 
       - name: Deploy to GitHub Pages
-        run: echo "Hello World"
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git checkout --orphan gh-pages
+          git rm -rf .
+          cp -r ../build/* .
+          git add -A
+          git commit -m "Deploy to GitHub Pages"
+          git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}" HEAD:gh-pages
