--- a/.github/workflows/learned.yml
+++ b/.github/workflows/learned.yml
@@ -39,12 +39,4 @@ jobs:
           path: gh-pages
 
       - name: Deploy to GitHub Pages
-        run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
-          git checkout --orphan gh-pages
-          git rm -rf .
-          cp -r ../build/* .
-          git add -A
-          git commit -m "Deploy to GitHub Pages"
-          git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}" HEAD:gh-pages
+        run: echo "Hello Bala"
