--- a/.github/workflows/learned.yml
+++ b/.github/workflows/learned.yml
@@ -39,4 +39,11 @@ jobs:
           path: gh-pages
 
       - name: Deploy to GitHub Pages
-        run: echo "Hello Bala"
+        run: |
+          cd gh-pages
+          git config user.name 'GitHub Actions'
+          git config user.email 'actions@github.com'
+          git init
+          git add .
+          git commit -m "Deploy to GitHub Pages"
+          git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}" HEAD:gh-pages
