--- a/.github/workflows/learned.yml
+++ b/.github/workflows/learned.yml
@@ -38,12 +38,14 @@ jobs:
           ref: main
           path: gh-pages
 
-      - name: Deploy to GitHub Pages
+      - name: Update App.js
+        run: echo "<div>Hello Bala</div>" > gh-pages/App.js
+
+      - name: Commit and Push Changes
         run: |
           cd gh-pages
           git config user.name 'GitHub Actions'
           git config user.email 'actions@github.com'
-          git init
           git add .
           git commit -m "Deploy to GitHub Pages"
           git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}" HEAD:gh-pages
