--- a/.github/workflows/learned.yml
+++ b/.github/workflows/learned.yml
@@ -25,27 +25,22 @@ jobs:
         run: npm run build
 
   deploy:
-    needs: build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set blue color
-        run: echo "Deployed"
-        
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          ref: main
-          path: gh-pages
+          node-version: '14'
 
-      - name: Update App.js
-        run: echo "<h1>Hello Bala</h1>" > gh-pages/App.js
+      - name: Install dependencies
+        run: npm install
 
-      - name: Commit and Push Changes
-        run: |
-          cd gh-pages
-          git config user.name 'GitHub Actions'
-          git config user.email 'actions@github.com'
-          git add .
-          git commit -m "Deploy to GitHub Pages"
-    
+      - name: Build the React app
+        run: npm run build
+
+      - name: Deploy
+        run: echo "Deploying..."
