--- a/.github/workflows/learned.yml
+++ b/.github/workflows/learned.yml
@@ -6,31 +6,12 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Build
-        run: npm run build
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
@@ -44,9 +25,9 @@ jobs:
         run: npm run build
 
       - name: Deploy to GitHub Pages
-        run: echo "Hello World"
-    
+        run: |
+          npm install -g gh-pages
+          gh-pages -d build
 
-      - name: Display "Hello World" (if deployment was successful)
+      - name: Display "Hello World"
         run: echo "Hello World"
-        if: success()  # This will only run if the deployment is successful
